--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
       <div class="heading">
         <h1>TODO</h1>
-        <img src="./images/icon-moon.svg" alt="moon" />
+        <img src="./images/icon-moon.svg" alt="moon" class="moon"/>
       </div>
       <div class="adding-todo">
         <div class="todo-check">
@@ -32,28 +32,9 @@
         />
       </div>
       <div class="todo-lists">
-        <div class="todo-content">
-          <div class="adding-todo-page">
-            <div class="todo-check">
-              <img src="./images/icon-check.svg" alt="check" />
-            </div>
-            <div class="todo-textcontent">
-              <s>Complete online java script course</s>
-            </div>
-            <img src="./images/icon-cross.svg" alt="delete" />
-          </div>
-          <div class="adding-todo-page">
-            <div class="todo-check">
-              <img src="./images/icon-check.svg" alt="check" />
-            </div>
-            <div class="todo-textcontent">
-              Jog around the park 3X
-            </div>
-            <img src="./images/icon-cross.svg" alt="delete" />
-          </div>
-        </div>
+        <div class="todo-content"></div>
         <div class="todo-options">
-          <p>5 items left</p>
+          <p class="items">No items left</p>
           <p>Clear Completed</p>
         </div>
       </div>
@@ -63,5 +44,6 @@
         <div class="option">Completed</div>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
